# launcher

./: .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  build.gradle.kts  firebase.json  firestore.rules  gradle.properties  settings.gradle.kts  storage.rules
.claude/: settings.json
.claude/hooks/: wire_format_reminder.py
.cursor/commands/: speckit.clarify.md
.cursor/rules/: specify-rules.mdc
.github/workflows/: f-crypto-tests.yml  integration-tests.yml
.specify/: init-options.json
app/: build.gradle.kts  google-services.json  google-services.json.template  proguard-rules.pro
backlog/: config.yml
config/: detekt.yml
core/: GLOSSARY.md  build.gradle.kts  consumer-rules.pro
crypto-ffi/: Cargo.toml  README.md  build.gradle.kts  rust-toolchain.toml
crypto-ffi/src/: lib.rs  mls.rs  storage.rs
crypto-ffi/src/androidTest/kotlin/family/launcher/cryptoffi/: HelloFfiTest.kt  PanicFfiTest.kt
crypto-ffi/src/main/: AndroidManifest.xml
docs/: recovery-flow.md
firestore-tests/: .gitignore  README.md  package-lock.json  package.json  rules.auth.test.ts  rules.f5.recovery.test.ts  rules.f5b.envelope.test.ts  rules.test.ts  rules.wire-version.test.ts  tsconfig.json  vitest.config.ts
gradle/: libs.versions.toml
lint-rules/: build.gradle.kts
push-worker/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
scripts/: build-output.txt  check-dev-env.ps1  pre-commit-detekt  reset-and-launch.ps1  run-test-devices.ps1  setup-rust-android.ps1  test-two-presets.ps1
tmp/: tg-current.xml  window_dump.xml
(+2793 files in other folders)
