[package]
name = "crypto_ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "crypto_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
openmls = "=0.8.1"
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
thiserror = "2"
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
